# malbuch

./: .gitignore  README.md  build.sh  docker-compose.yml  flake.nix
be/: Cargo.toml  Dockerfile
be/src/: main.rs
fe/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
fe/nginx/: default.conf
fe/src/: App.tsx  index.css
fe/src/components/ui/: background-card.tsx  button.tsx
fe/src/components/ui/icons/: upload.tsx
fe/src/components/ui/image-card/: deletion-element.tsx  image-card.tsx
fe/src/components/ui/sidebar/: sidebar.tsx  upload-element.tsx
fe/src/lib/: img-utils.ts  network-utils.ts
fe/src/types/: image.ts
