[package]
name = "malbuch-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server", "multipart"] }
